--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest-environment-jsdom": "^30.0.5",
     "jsdom": "^26.1.0",
     "playwright": "^1.54.2",
+    "prettier": "3.6.2",
     "storybook": "^9.1.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
