--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write .",
     "storybook": "storybook dev -p 6006",
     "test": "jest",
     "test:watch": "jest --watch"
