--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   front:
@@ -10,4 +10,4 @@ services:
     environment:
       - NODE_ENV=development
     ports:
-      - "3000:3000"
+      - '3000:3000'
