--- a/.github/workflows/front_ci.yml
+++ b/.github/workflows/front_ci.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   lint:
     name: Lint and Format Check
-    runs-on: ubuntu-ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
